# cpp_in_python

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
.github/workflows/: build_test.yml  operation_test.yml
include/cpp_in_python/: sub_two_ints.h
src/: sub_two_ints.cpp  sub_two_ints_wrapper.cpp
src/cpp_in_python/: __init__.py  _sub_two_ints_wrapper_py.py
test/: test.bash  test_script.py
